// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote Block should render Default 1`] = `
<DocumentFragment>
  <blockquote
    class="css-jrn897-QuoteBlockWrapper e1ugt7gl1"
  >
    <div
      class="css-1v9bccv-QuoteContent e1ugt7gl0"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 css-1amaxt6-MuiTypography-root"
      >
        «This is a quote»
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        von John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithClassName 1`] = `
<DocumentFragment>
  <blockquote
    class="extra-classname css-jrn897-QuoteBlockWrapper e1ugt7gl1"
  >
    <div
      class="css-1v9bccv-QuoteContent e1ugt7gl0"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 css-1amaxt6-MuiTypography-root"
      >
        «This is a quote»
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        von John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithEmotion 1`] = `
<DocumentFragment>
  <blockquote
    class="css-jrn897-QuoteBlockWrapper e1ugt7gl1"
  >
    <div
      class="css-1v9bccv-QuoteContent e1ugt7gl0"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 css-1amaxt6-MuiTypography-root"
      >
        «This is a quote»
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        von John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithImage 1`] = `
<DocumentFragment>
  <blockquote
    class="css-bkv3mi-QuoteBlockWrapper e1ugt7gl1"
  >
    <img
      alt="DSC07717"
      class="css-cibo30-ImageWrapper e1shv2yg0"
      loading="lazy"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title=""
    />
    <div
      class="css-1v9bccv-QuoteContent e1ugt7gl0"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 css-1amaxt6-MuiTypography-root"
      >
        «This is a quote»
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 css-1hfd6p6-MuiTypography-root"
      >
        von John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;
